--- a/Quiz/Quiz.csproj
+++ b/Quiz/Quiz.csproj
@@ -71,6 +71,7 @@
     <Content Include="Quiz20210504.aspx" />
     <Content Include="Quiz20210511.aspx" />
     <Content Include="Web.config" />
+    <Content Include="Quiz20210511_1.aspx" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Global.asax.cs">
@@ -90,6 +91,13 @@
     </Compile>
     <Compile Include="Quiz20210511.aspx.designer.cs">
       <DependentUpon>Quiz20210511.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Quiz20210511_1.aspx.cs">
+      <DependentUpon>Quiz20210511_1.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Quiz20210511_1.aspx.designer.cs">
+      <DependentUpon>Quiz20210511_1.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
