--- a/Quiz/Quiz.csproj
+++ b/Quiz/Quiz.csproj
@@ -70,6 +70,7 @@
     <Content Include="Global.asax" />
     <Content Include="Quiz20210504.aspx" />
     <Content Include="Quiz20210511.aspx" />
+    <Content Include="Quiz20210518.aspx" />
     <Content Include="Web.config" />
     <Content Include="Quiz20210511_1.aspx" />
   </ItemGroup>
@@ -98,6 +99,13 @@
     </Compile>
     <Compile Include="Quiz20210511_1.aspx.designer.cs">
       <DependentUpon>Quiz20210511_1.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Quiz20210518.aspx.cs">
+      <DependentUpon>Quiz20210518.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Quiz20210518.aspx.designer.cs">
+      <DependentUpon>Quiz20210518.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
